hw04 and lab05 update

--- a/app/static/hw04_rwd.html
+++ b/app/static/hw04_rwd.html
@@ -17,14 +17,214 @@
         <div class="col-sm-12 col-md-6 col-xl-3">
             <div class="card">
                 <div class="card-title">
-                    <p style="text-align:left;">Card 1</p>
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
+                </div>
+                <div class="card-body good">
+                    <div class="row">
+                        <div class="col">
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
+                        </div>
+                        <div class="col icon-good"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                                <p>Good</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--card 2-->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
+                </div>
+                <div class="card-body moderate">
+                    <div class="row">
+                        <div class="col">
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
+                        </div>
+                        <div class="col icon-moderate"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                                <p>Moderate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--card3-->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
+                </div>
+                <div class="card-body unhealthy-sensitive">
+                    <div class="row">
+                        <div class="col">
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
+                        </div>
+                        <div class="col icon-unhealthy-sensitive"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                                <p>Unhealthy for sensitive group</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--card4-->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
+                </div>
+                <div class="card-body unhealthy">
+                    <div class="row">
+                        <div class="col">
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
+                        </div>
+                        <div class="col icon-unhealthy"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                                <p>Unhealthy</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--card5-->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
+                </div>
+                <div class="card-body very-unhealthy">
+                    <div class="row">
+                        <div class="col">
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
+                        </div>
+                        <div class="col icon-very-unhealthy"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                                <p>Very unhealthy</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="row">
+                        <div class="col-4">
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
+                        </div>
+                        <div class="col-4">
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--card6-->
+        <div class="col-sm-12 col-md-6 col-xl-3">
+            <div class="card">
+                <div class="card-title">
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
                 </div>
                 <div class="card-body hazardous">
                     <div class="row">
                         <div class="col">
-                            <h5>1 December</h5>
-                            <h5>2077</h5>
-                            <h2>5000</h2>
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
                         </div>
                         <div class="col icon-hazardous"></div>
                     </div>
@@ -37,144 +237,102 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-4">
-                            <h6>Dec 2<br></h6>
-                            <h5 class="hazardous">500</h5>
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
                         </div>
                         <div class="col-4">
-                            <h6>Dec 3<br></h6>
-                            <h5 class="hazardous">800</h5>
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
                         </div>
                         <div class="col-4">
-                            <h6>Dec 4<br></h6>
-                            <h5 class="hazardous">900</h5>
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- card2 -->
+
+        <!--card7-->
         <div class="col-sm-12 col-md-6 col-xl-3">
             <div class="card">
                 <div class="card-title">
-                    <p style="text-align:left;">Card 2</p>
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
                 </div>
                 <div class="card-body good">
                     <div class="row">
                         <div class="col">
-                            <h5>1 December</h5>
-                            <h5>2077</h5>
-                            <h2>5000</h2>
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
                         </div>
                         <div class="col icon-good"></div>
                     </div>
                     <div class="row">
                         <div class="col">
-                                <p>good</p>
+                                <p>sample badge</p>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-4">
-                            <h6>Dec 2<br></h6>
-                            <h5 class="hazardous">500</h5>
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
                         </div>
                         <div class="col-4">
-                            <h6>Dec 3<br></h6>
-                            <h5 class="hazardous">800</h5>
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
                         </div>
                         <div class="col-4">
-                            <h6>Dec 4<br></h6>
-                            <h5 class="hazardous">900</h5>
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- card3 -->
+        <!--card8-->
         <div class="col-sm-12 col-md-6 col-xl-3">
             <div class="card">
                 <div class="card-title">
-                    <p style="text-align:left;">Card 3</p>
+                    <p style="text-align:left;">Chiang Mai air quality index</p>
                 </div>
-                <div class="card-body moderate">
+                <div class="card-body good">
                     <div class="row">
                         <div class="col">
-                            <h5>1 December</h5>
-                            <h5>2077</h5>
-                            <h2>5000</h2>
+                            <h6>09 December</h6>
+                            <h6>2023</h6>
+                            <h2>65</h2>
                         </div>
-                        <div class="col icon-moderate"></div>
+                        <div class="col icon-good"></div>
                     </div>
                     <div class="row">
                         <div class="col">
-                                <p>moderate</p>
+                                <p>sample badge</p>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-4">
-                            <h6>Dec 2<br></h6>
-                            <h5 class="hazardous">500</h5>
+                            <h6>Dec 10<br></h6>
+                            <h5 class="good">64</h5>
                         </div>
                         <div class="col-4">
-                            <h6>Dec 3<br></h6>
-                            <h5 class="hazardous">800</h5>
+                            <h6>Dec 11<br></h6>
+                            <h5 class="unhealthy">62</h5>
                         </div>
                         <div class="col-4">
-                            <h6>Dec 4<br></h6>
-                            <h5 class="hazardous">900</h5>
+                            <h6>Dec 12<br></h6>
+                            <h5 class="moderate">61</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <!-- card4 -->
-        <div class="col-sm-12 col-md-6 col-xl-3">
-            <div class="card">
-                <div class="card-title">
-                    <p style="text-align:left;">Card 4</p>
-                </div>
-                <div class="card-body unhealthy-sensitive">
-                    <div class="row">
-                        <div class="col">
-                            <h5>1 December</h5>
-                            <h5>2077</h5>
-                            <h2>5000</h2>
-                        </div>
-                        <div class="col icon-unhealthy-sensitive"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                                <p>unhealthy-sensitive</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <div class="row">
-                        <div class="col-4">
-                            <h6>Dec 2<br></h6>
-                            <h5 class="hazardous">500</h5>
-                        </div>
-                        <div class="col-4">
-                            <h6>Dec 3<br></h6>
-                            <h5 class="hazardous">800</h5>
-                        </div>
-                        <div class="col-4">
-                            <h6>Dec 4<br></h6>
-                            <h5 class="hazardous">900</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <a href="https://youtu.be/GBIIQ0kP15E?si=4SEHwuJHDeWvh4wU">
-            <div class="noooo"></div>
-        </a>
+    
     </div>
 </body>
 </html>
